--- a/index.html
+++ b/index.html
@@ -15,5 +15,20 @@
 </head>
 <body>
   
+  <header>
+    <a href="#" class="logo">Foods</a>
+    <div class="bx bx-menu" id="menu-icon"></div>
+
+    <ul class="navbar">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#menu">Menu</a></li>
+      <li><a href="#service">Service</a></li>
+      <li><a href="#contact">Contact</a></li>
+      
+    </ul>
+  </header>
+
+
 </body>
 </html>
