update file css dan html

--- a/index.html
+++ b/index.html
@@ -30,5 +30,20 @@
   </header>
 
 
+  <!---home start-->
+  <section class="home" id="home">
+    <div class="home-text">
+        <h1>Full Website</h1>
+        <h1>Food The <br> Most Precius Things</h1>
+        <a href="#" class="btn">Today's Menu</a>
+    </div>
+
+    <div class="home-img">
+      <img src="img/home.png">
+    </div>
+  </section>
+
+
+
 </body>
 </html>
