style.css dan index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,14 @@
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
 
 
 </head>
+
 <body>
-  
+
   <header>
     <a href="#" class="logo">Foods</a>
     <div class="bx bx-menu" id="menu-icon"></div>
@@ -25,7 +28,7 @@
       <li><a href="#menu">Menu</a></li>
       <li><a href="#service">Service</a></li>
       <li><a href="#contact">Contact</a></li>
-      
+
     </ul>
   </header>
 
@@ -33,9 +36,9 @@
   <!---home start-->
   <section class="home" id="home">
     <div class="home-text">
-        <h1>Full Website</h1>
-        <h1>Food The <br> Most Precius Things</h1>
-        <a href="#" class="btn">Today's Menu</a>
+      <h1>Full Website</h1>
+      <h2>Food The <br> Most Precius Things</h2>
+      <a href="#" class="btn">Today's Menu</a>
     </div>
 
     <div class="home-img">
@@ -43,7 +46,61 @@
     </div>
   </section>
 
+  <!---about start-->
+  <section class="about" id="about">
+    <div class="about-img">
+      <img src="img/about.png" alt="">
+    </div>
 
+    <div class="about-text">
+      <span>About Us</span>
+      <h2>We speak the good <br> food language</h2>
+      <p>There are many variations passages of Lorem Ipsum available, but the majority have suffered alteration in form,
+        by injected hunour randomised word which don't look even slightly believable</p>
+      <a href="#" class="btn">Today's Menu</a>
+    </div>
+  </section>
 
+  <!---menu start-->
+  <section class="menu" id="menu">
+    <div class="heading">
+      <span>Food menu</span>
+      <h2>Fresh taste and great price</h2>
+    </div>
+
+    <div class="menu-container">
+      <div class="box">
+        <div class="box-img">
+          <img src="img/food1.png">
+        </div>
+        <h2>Chicken Burger</h2>
+        <h3>Tasty Food</h3>
+        <span>$11.00</span>
+        <i class='bx bx-cart-alt'></i>
+      </div>
+
+      <div class="box">
+        <div class="box-img">
+          <img src="img/food1.png">
+        </div>
+        <h2>Chicken Burger</h2>
+        <h3>Tasty Food</h3>
+        <span>$11.00</span>
+        <i class='bx bx-cart-alt'></i>
+      </div>
+
+      <div class="box">
+        <div class="box-img">
+          <img src="img/food1.png">
+        </div>
+        <h2>Chicken Burger</h2>
+        <h3>Tasty Food</h3>
+        <span>$11.00</span>
+        <i class='bx bx-cart-alt'></i>
+      </div>
+    </div>
+    </div>
+  </section>
 </body>
+
 </html>
