--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!---about start-->
   <section class="about" id="about">
     <div class="about-img">
-      <img src="img/about.png" alt="">
+      <img src="img/about.png">
     </div>
 
     <div class="about-text">
@@ -57,7 +57,7 @@
       <h2>We speak the good <br> food language</h2>
       <p>There are many variations passages of Lorem Ipsum available, but the majority have suffered alteration in form,
         by injected hunour randomised word which don't look even slightly believable</p>
-      <a href="#" class="btn">Today's Menu</a>
+      <a href="#" class="btn">Learn More</a>
     </div>
   </section>
 
@@ -81,9 +81,9 @@
 
       <div class="box">
         <div class="box-img">
-          <img src="img/food1.png">
+          <img src="img/food2.png">
         </div>
-        <h2>Chicken Burger</h2>
+        <h2>Special Beef Burger</h2>
         <h3>Tasty Food</h3>
         <span>$11.00</span>
         <i class='bx bx-cart-alt'></i>
@@ -91,16 +91,109 @@
 
       <div class="box">
         <div class="box-img">
-          <img src="img/food1.png">
+          <img src="img/food3.png">
         </div>
-        <h2>Chicken Burger</h2>
+        <h2>Chicken Fry Pack</h2>
         <h3>Tasty Food</h3>
         <span>$11.00</span>
         <i class='bx bx-cart-alt'></i>
       </div>
-    </div>
+
     </div>
   </section>
+
+  <!---service start-->
+  <section class="services" id="services">
+    <div class="heading">
+      <span>services</span>
+      <h2>We provide best quality food</h2>
+    </div>
+
+    <div class="service-container">
+      <div class="s-box">
+        <img src="img/s1.png">
+        <h3>Order</h3>
+        <p>There are many variations of passages of Lorem Ipsum available but majority have suffered alteration injected
+          humour</p>
+      </div>
+
+      <div class="s-box">
+        <img src="img/s2.png">
+        <h3>Shipping</h3>
+        <p>There are many variations of passages of Lorem Ipsum available but majority have suffered alteration injected
+          humour</p>
+      </div>
+
+      <div class="s-box">
+        <img src="img/s3.png">
+        <h3>Delivered</h3>
+        <p>There are many variations of passages of Lorem Ipsum available but majority have suffered alteration injected
+          humour</p>
+      </div>
+    </div>
+  </section>
+
+  <!---service start-->
+  <section class="cta">
+    <div class="box-img">
+      <h2>We make quality food <br>Everyday</h2>
+      <a href="#" class="btn">Let's talk</a>
+    </div>
+  </section>
+
+  <!---footer start-->
+  <section id="contact">
+    <div class="footer">
+      <div class="main">
+        <div class="col">
+          <h4>Menu Links</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="col">
+          <h4>Our Service</h4>
+          <ul>
+            <li><a href="#">Web Design</a></li>
+            <li><a href="#">Web Developement</a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">Product Management</a></li>
+            <li><a href="#">Graphic Design</a></li>
+          </ul>
+        </div>
+
+        <div class="col">
+          <h4>Information</h4>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Delivery Information</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+          </ul>
+        </div>
+
+        <div class="col">
+          <h4>Contact Us</h4>
+          <div class="social">
+            <a href=""><i class='bx bxl-facebook'></i></a>
+            <a href=""><i class='bx bxl-instagram'></i></a>
+            <a href=""><i class='bx bxl-twitter'></i></a>
+            <a href=""><i class='bx bxl-youtube'></i></a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!--Javascript-->
+  <script type="text/javascript" src="script/script.js"></script>
+
 </body>
 
 </html>
