--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
-
+ 
 
 </head>
 
 <body>
-
+<div id="app">
   <header>
     <a href="#" class="logo">Foods</a>
     <div class="bx bx-menu" id="menu-icon"></div>
@@ -33,11 +33,13 @@
   </header>
 
 
-  <!---home start-->
+
+  <!---home start-->s
   <section class="home" id="home">
     <div class="home-text">
-      <h1>Full Website</h1>
-      <h2>Food The <br> Most Precius Things</h2>
+      
+      <h1> {{nama}} </h1>
+      <h2> {{nama1}}<br> </h2>
       <a href="#" class="btn">Today's Menu</a>
     </div>
 
@@ -74,8 +76,7 @@
           <img src="img/food1.png">
         </div>
         <h2>Chicken Burger</h2>
-        <h3>Tasty Food</h3>
-        <span>$11.00</span>
+        <span>Rp.32.000</span>
         <i class='bx bx-cart-alt'></i>
       </div>
 
@@ -84,8 +85,7 @@
           <img src="img/food2.png">
         </div>
         <h2>Special Beef Burger</h2>
-        <h3>Tasty Food</h3>
-        <span>$11.00</span>
+        <span>Rp.45.000</span>
         <i class='bx bx-cart-alt'></i>
       </div>
 
@@ -94,8 +94,7 @@
           <img src="img/food3.png">
         </div>
         <h2>Chicken Fry Pack</h2>
-        <h3>Tasty Food</h3>
-        <span>$11.00</span>
+        <span>Rp.104.000</span>
         <i class='bx bx-cart-alt'></i>
       </div>
 
@@ -136,7 +135,7 @@
   <!---service start-->
   <section class="cta">
     <div class="box-img">
-      <h2>We make quality food <br>Everyday</h2>
+      <h2>We make quality food Everyday</h2>
       <a href="#" class="btn">Let's talk</a>
     </div>
   </section>
@@ -186,14 +185,42 @@
             <a href=""><i class='bx bxl-youtube'></i></a>
           </div>
         </div>
-
       </div>
     </div>
   </section>
+</div>
 
   <!--Javascript-->
   <script type="text/javascript" src="script/script.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14"></script>
+  <script>
+    const member = {
+      nama: 'Full Website', 
+      nama1: 'Food The Most Precius Things',
+      jumlah: '1',
+      nama_makanan: 'burger',
+      harga: '',
+      nama_makanan2: '',
+      harga2: '',
+      nama_makanan3: '',
+      harga3: '',
+    }
+   const vm = new Vue({
+    el: '#app',
+    data: {
+      nama: 'Full Website', 
+      nama1: 'Food The Most Precius Things',
+      jumlah: '1',
+      nama_makanan: 'burger',
+      harga: '',
+      nama_makanan2: '',
+      harga2: '',
+      nama_makanan3: '',
+      harga3: '',
+    }
+   })
+   
+  </script>
 </body>
 
 </html>
